--- a/components/Home/Collection/Collection.module.css
+++ b/components/Home/Collection/Collection.module.css
@@ -3,7 +3,8 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    background: #fff;
+    background: #FFFEF9;
+    position: relative;
 }
 
 .container {
@@ -28,4 +29,54 @@
 .container>li:hover {
     color: var(--violet_dark);
     border-bottom: 3px solid var(--violet_dark);
+}
+
+.container > li:hover .dropdown {
+    display: flex;
+    transition: all 0.3s ease;
+}
+
+.dropdown {
+    display: none;
+    width: 100%;
+    position: absolute;
+    z-index: 3;
+    top: 4rem;
+    left: 0;
+    background: #FFFEF9;
+    align-items: center;
+    justify-content: space-evenly;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+}
+
+.category {
+    display: flex;
+    cursor: pointer;
+    flex-direction: column;
+    padding: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.category > h3 {
+    font-size: 1.6rem;
+    width: 100%;
+    text-align: center;
+    font-weight: 500;
+    color: var(--grey);
+    border-bottom: 1px solid var(--grey);
+}
+
+.vertical {
+    height: 30rem;
+    width: .1rem;
+    background: var(--grey);
+}
+
+.cat_img {
+    position: relative;
+    width: 30rem;
+    margin-top: 2rem;
+    height: 30rem;
 }
