--- a/components/Home/Collection/Collection.module.css
+++ b/components/Home/Collection/Collection.module.css
@@ -50,6 +50,11 @@
     transition: all 0.3s ease;
 }
 
+.dropdown.row {
+    justify-content: flex-start;
+    padding: 2rem;
+}
+
 .category {
     display: flex;
     cursor: pointer;
@@ -76,7 +81,27 @@
 
 .cat_img {
     position: relative;
-    width: 30rem;
+    width: 25rem;
     margin-top: 2rem;
-    height: 30rem;
+    height: 25rem;
+}
+
+.sub_category {
+    display: flex;
+    flex-direction: column;
+}
+
+.sub_category > li {
+    padding: 1rem;
+    cursor: pointer;
+    color: var(--grey);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.sub_category > li:hover {
+    background: #F4F1E6;
+    color: var(--violet_dark);
+    font-weight: 600;
 }
