--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,3 +59,16 @@ h6 {
   justify-content: center;
   padding: 1rem;
 }
+
+.link {
+  width: fit-content;
+  cursor: pointer;
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #370f3d;
+}
+
+.link:hover {
+  color: #ffc107;
+  transition: all 0.3s ease;
+}
