--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent !important;
+  -webkit-focus-ring-color: transparent !important;
+  outline: none !important;
 }
 
 html {
@@ -72,3 +75,27 @@ h6 {
   color: #ffc107;
   transition: all 0.3s ease;
 }
+
+@media (max-width: 1199.98px) {
+
+}
+
+/* for Medium devices such as tablets --------------
+---------------------*/
+@media (max-width: 991.98px) {
+
+}
+
+/* Small devices (landscape phone, )------------------
+--------------------------- */
+
+@media (max-width: 767.98px) {
+
+}
+
+/* Small devices such as phone -------------------
+-----------------------------------*/
+
+@media (max-width: 575.98px) {
+  
+ }
