--- a/components/Home/Collection/Collection.module.css
+++ b/components/Home/Collection/Collection.module.css
@@ -128,14 +128,63 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-wrap: wrap;
-    grid-gap: .5rem;
+    grid-gap: 1rem;
     height: 30rem;
 }
 
 .list > li {
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.4rem;
+    /* color: var(--violet_dark); */
     font-weight: 400;
+}
+
+/* Gold rate styling */
+.container > li:hover .gold_rate {
+    display: flex;
+    transition: all 0.3s ease;
+}
+.gold_wrapper {
+    position: relative;
+}
+
+.gold_rate {
+    width: 20rem;
+    padding: 1rem;
+    position: absolute;
+    /* border: 1px solid var(--grey); */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: none;
+    flex-direction: column;
+    grid-gap: .5rem;
+    align-items: center;
+    justify-content: center;
+    background: #FFFDF5;
+    top: 100%;
+    left: -50%;
+}
+
+.gold_rate > h5 {
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+.rate {
+    display: flex;
+    align-items: center;
+    grid-gap: .5rem;
+    border-bottom: 1px solid var(--grey);
+}
+
+.rate > h6 {
+    font-size: 1.4rem;
+}
+
+.gold_rate > h6 {
+    font-size: 1.4rem;
+    font-weight: 400;
+    text-align: center;
 }
